# OrderBook-rs

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  README.tpl
.github/workflows/: semver.yml
benches/: mod.rs
benches/concurrent/: contention.rs  mod.rs  register.rs
benches/order_book/: add_orders.rs  match_orders.rs  matching.rs  mixed_operations.rs  mod.rs  update_orders.rs
benches/simple/: basic.rs  first.rs
examples/: Cargo.toml
src/: lib.rs
src/orderbook/: book.rs  cache.rs  error.rs  matching.rs  mod.rs  modifications.rs  operations.rs  pool.rs  private.rs  snapshot.rs
src/orderbook/tests/: book.rs  error.rs  matching.rs  mod.rs  modifications.rs  operations.rs  order.rs  snapshot.rs  time_in_force.rs  uuid.rs
src/utils/: mod.rs  time.rs
src/utils/tests/: time.rs
tests/unit/: book_coverage_tests.rs  matching_coverage_tests.rs  matching_coverage_tests_extended.rs  mod.rs  modifications_coverage_tests.rs  operations_coverage_tests.rs  operations_coverage_tests_extended.rs  private_coverage_tests.rs
