[package]
name = "orderbook-rs"
version = "0.3.0"
edition = "2024"
authors = ["Joaquin Bejar <jb@taunais.com>"]
description = "A high-performance, lock-free price level implementation for limit order books in Rust. This library provides the building blocks for creating efficient trading systems with support for multiple order types and concurrent access patterns."
license = "MIT"
readme = "README.md"
repository = "https://github.com/joaquinbejar/OrderBook-rs"
homepage = "https://github.com/joaquinbejar/OrderBook-rs"
keywords = ["finance", "orderbook", "trading"]
categories = ["finance", "data-structures"]


include = [
    "benches/**/*",
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "examples/**/*.rs",
    "tests/**/*.rs",
    "Makefile",
    "rust-toolchain.toml",
    "Draws/**/*.png",
    "Docker/**/*.Dockerfile",
    "Docker/**/*.yml",
]

[dependencies]
tracing = { workspace = true }
uuid = { workspace = true }
pricelevel = { workspace = true }
dashmap = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }

[[bench]]
name = "benches"
path = "benches/mod.rs"
harness = false

[[test]]
name = "tests"
path = "tests/unit/mod.rs"


[lib]
name = "orderbook_rs"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[workspace]
members = [
    "examples"
]

[workspace.dependencies]
orderbook-rs = { path = "." }
tracing = "0.1"
#pricelevel = "0.3"
pricelevel = { path = "../pricelevel" }
uuid = { version = "1.18", features = ["v4", "v5", "serde"] }
dashmap = "6.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }